Added more sections

--- a/src/input.css
+++ b/src/input.css
@@ -1,1 +1,5 @@
 @import "tailwindcss";
+
+.common_class{
+    @apply bg-white border-2 border-blue-500 rounded p-4 w-[100px] justify-center flex items-center;
+}
